<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_sms_detail_keyboard_message"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="center"
        style="@style/sms_detail_indicator_image_style"
        />



    <LinearLayout
        android:id="@+id/ll_sms_detail_indicator_help"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="2"
        >

        <Button
            android:id="@+id/bt_sms_detail_indicator_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/icon_menuitem_expand_up"
            android:textSize="12sp"
            android:textColor="#dd0a0a0a"
            android:text="@string/need_help"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/bt_sms_detail_indicator_safe_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/icon_menuitem_expand_up"
            android:textSize="12sp"
            android:textColor="#dd0a0a0a"
            android:text="@string/safe_tip"
            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/bt_sms_detail_indicator_more_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/icon_menuitem_expand_up"
            android:textSize="12sp"
            android:textColor="#dd0a0a0a"
            android:text="@string/more_service"
            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/bt_sms_detail_indicator_activity_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/icon_menuitem_expand_up"
            android:textSize="12sp"
            android:textColor="#dd0a0a0a"
            android:text="@string/activity_center"
            />



    </LinearLayout>




</LinearLayout>