<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ll_friend_fragment"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="35">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/friend_textview_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contact" />

                <TextView
                    style="@style/friend_textview_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/groupchat" />

                <TextView
                    style="@style/friend_textview_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/subscription" />

            </LinearLayout>

            <ListView
                android:id="@+id/lv_friend_function_tab"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">

            </ListView>


            <ListView
                android:id="@+id/lv_friend_contact"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10">

            </ListView>

        </LinearLayout>

        <!--中间的字母-->
        <TextView
            android:id="@+id/tv_index"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            style="@style/friend_index_style"
            android:gravity="center"
            android:text="A"
            android:textColor="#ffffff"
            android:textSize="30sp" />
    </FrameLayout>

    <!--右边的索引-->
    <LinearLayout
        android:id="@+id/ll_index"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_gravity="right"
        android:layout_weight="3"
        android:background="#ffeeeeee"
        android:gravity="center"
        android:orientation="vertical">

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A"/>-->


    </LinearLayout>


</LinearLayout>